--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 spring:
   datasource:
     name: home
-    url: jdbc:mysql://localhost:3306/home?useUnicode=true&amp;characterEncoding=utf8&amp;serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/home?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
