--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 ##sping-boot工程配置文档
 
+##tomcat配置
 server:
   tomcat:
     port: 8080
     uriEncoding: utf-8
 
-
+##mysql配置，redis配置
 spring:
   datasource:
     name: home
@@ -17,11 +18,22 @@ spring:
     maxIdle: 10
     minIdle: 5
     initialSize: 5
+  redis:
+    database: 0 #Redis索引0~15，默认为0
+    host: 127.0.0.1
+    port: 6379
+    password:  #密码（默认为空）
+    lettuce: # 这里标明使用lettuce配置
+      pool:
+        max-active: 80   #连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms  #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 5     #连接池中的最大空闲连接
+        min-idle: 0     #连接池中的最小空闲连接
+    timeout: 10000ms    #连接超时时间（毫秒）
 
-
-## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
+##mybatis配置56856
 mybatis:
-  mapper-locations: classpath:mapper/*.java  #注意：一定要对应mapper映射xml文件的所在路径
-  type-aliases-package: com.winter.model  # 注意：对应实体类的路径
+  mapper-locations: classpath:mapper/*.java  #注意：一定要对应mapper所在路径
+  type-aliases-package: model # 注意：对应实体类的路径
 
 
