去掉启动主函数配置,加入swaggerui

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
+        <!--swagger ui-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -68,9 +79,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>start.SpringbootApplication</mainClass>
-                </configuration>
+                <!--<configuration>-->
+                    <!--<mainClass>start.SpringbootApplication</mainClass>-->
+                <!--</configuration>-->
             </plugin>
         </plugins>
     </build>
