--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <version>1.2.54</version>
         </dependency>
         <!--swagger ui-->
         <dependency>
@@ -79,9 +79,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--<configuration>-->
-                    <!--<mainClass>start.SpringbootApplication</mainClass>-->
-                <!--</configuration>-->
+                <configuration>
+                    <mainClass>start.SpringbootApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
