--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 
 ##tomcat配置
 server:
-    port: 8080
+  port: 8080
 
 ##mysql配置，redis配置
 spring:
@@ -28,10 +28,13 @@ spring:
         max-idle: 5     #连接池中的最大空闲连接
         min-idle: 0     #连接池中的最小空闲连接
     timeout: 10000ms    #连接超时时间（毫秒）
+  kafka:
+    bootstrap-servers: localhost:9092 #kafka服务器
 
 ##mybatis配置56856
 mybatis:
   mapper-locations: classpath:mapper/*.java  #注意：一定要对应mapper所在路径
   type-aliases-package: model # 注意：对应实体类的路径
+
 
 
